<resources>
    <string name="app_name">山大脉络</string>
    <string name="action_settings">设置</string>
    <string name="action_share">分享</string>
    <string name="action_copy">复制</string>
    <string name="action_open">浏览器打开</string>
    <string name="title_activity_fresh_news_detail">山大新闻</string>
    <string name="title_activity_school_activities_detail">活动详情</string>
    <string name="title_activity_setting">设置</string>
    <string name="loading">加载中...</string>
    <string name="action_more">更多</string>
    <string name="permit"></string>


    <string name="action_add">关注标签</string>
    <string name="action_notification">通知</string>
    <string name="action_search">搜索</string>
    <string name="news">新闻</string>
    <string name="chat">大喇叭</string>
    <string name="todo">日程</string>
    <string name="timetable">课程表</string>
    <string name="school_activities">活动大厅</string>
    <string name="my_collection">我的主页</string>
    <string name="home">首页</string>
    <string name="settings">设置</string>
    <string name="feedback">反馈</string>
    <string name="share">分享</string>
    <string name="register_or_login">注册.登陆</string>
    <string name="title_activity_settings">设置</string>




///////////////////////////////////////////////////////////////////////////////////////




    <string name="now_login">立即登陆</string>
    <string name="phone_login">手机登陆/注册</string>
    <string name="skip_login">跳过</string>
    <string name="tag_follow_tip">关注你感兴趣的标签，相关优质文章将在你的首页显示。</string>
    <string name="no_data">暂无数据，看看其他的吧</string>
    <string name="btn_retry">重试</string>

    <string name="follow_tag_tip">点击下方关注标签，开始关注你感兴趣的内容，该标签下的优质文章将在本页展示</string>
    <string name="follow_tag_btn">关注标签</string>

    <string name="view_comment">查看评论</string>
    <string name="action_view_in_browser">用浏览器打开</string>

    <string name="transition_name_author_icon">author_icon_image_view</string>
    <string name="manage_tag_activity_title">关注标签</string>
    <string name="phone">手机号</string>
    <string name="user_name">用户名</string>
    <string name="pwd">密码</string>
    <string name="pwd_again">确认密码</string>

    <string name="binding_sxu_id">绑定学号</string>
    <string name="change_sxu_id">更改绑定学号</string>
    <string name="sxu_id">学号</string>
    <string name="sxu_pwd">信息门户密码</string>
    <string name="id_binding">绑定</string>

    <string name="register_by_phone">手机注册</string>
    <string name="register">注册</string>
    <string name="binding">绑定</string>
    <string name="login_phone">已有手机号,立即去登陆</string>
    <string name="login_by_account">账号登陆</string>

    <string name="verify_code">验证码</string>
    <string name="login_confirm">确定</string>
    <string name="login">登陆</string>
    <string name="forgot_pwd">忘记密码?</string>
    <string name="register_phone">注册账号</string>
    <string name="verify_error">无效的短信验证码</string>
    <string name="logout">退出</string>
    <string name="demo_author">[open source>>https://github.com/zehaisang/sxumiro]</string>

    /////////////////////////////////////////////////////////////////////////////////////////////////

    <string name="no_to_dos">你没有任何日程计划</string>
    <string name="title">标题</string>
    <string name="remind_me">提醒</string>
    <string name="choose_date">日期</string>
    <string name="choose_time">时间</string>
    <string name="remind_date_and_time">提醒时间为 %1$s%2$s日%3$s</string>
    <string name="about">关于</string>
    <string name="done_label">Done</string>
    <string name="date_reminder_default">Today</string>
    <string name="date_error_check_again">此提醒已失效.</string>
    <string name="night_mode">夜间模式</string>
    <string name="night_mode_on_summary">夜间模式已开启</string>
    <string name="night_mode_off_summary">夜间模式已关闭</string>

    <string-array name="snooze_options">
        <item>10 分钟</item>
        <item>30 分钟</item>
        <item>1 小时</item>
    </string-array>
    <string name="example">示例</string>
    <string name="night_mode_pref_key">开启夜间模式</string>
    <string name="snooze">延后</string>
    <string name="remove">移除</string>
    <string name="version_detail">
        0.11 ui风格与ui框架搭建 增加侧滑栏 \n
        0.21 增加成绩查询功能，使用原生httpconnection\n
0.31 更改整体软件框架为mvc架构，加入新闻功能，使用了大批框架\n
0.40 使用mvc架构重写成绩查询，更换网络框架为volley混合okhttp\n
0.41 更改侧边栏框架为materialdrawer，侧边栏小图标使用矢量字体库iconics来保证在不同屏幕下的清晰度，更改整体切换页面设计为viewpager套viewpager套fragment来达到记忆上次状态的功能\n
0.42 加入成绩图表\n
0.43 加入用户登陆界面\n
0.50 加入日程功能\n
0.60 加入活动大厅功能\n</string>
    <string name="share_sxumiro">【山大脉络，你口袋里的山西大学】http://download.sxumiro.com</string>
</resources>
