<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
>

    <include layout="@layout/app_bar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_bar"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
       >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="学号绑定"
            android:textColor="@color/primary"
            android:layout_gravity="center"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/sxu_id_InputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/sxu_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sxu_id"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/sxu_pwd_InputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/sxu_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sxu_pwd"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:id="@+id/id_binding_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/add_tag_btn_selector"
            android:text="@string/id_binding"
            android:enabled="false"
            android:textColor="@android:color/white"
            android:textSize="22sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/skip_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textColor="@color/clickable_text_gray_color"
        android:text="@string/skip_login"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:onClick="SkipLogin"/>
</RelativeLayout>
