<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/icon_login_choice"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal|bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/now_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_btn_selector"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:onClick="NowLogin"
            android:padding="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_send_now"
                android:padding="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="4dp"
                android:text="@string/now_login"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/phone_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="top|center_horizontal"
            android:onClick="Login"

            android:paddingTop="@dimen/activity_horizontal_margin"
            android:text="@string/phone_login"
            android:textColor="@drawable/transparent_btn_selector" />

        <Button
            android:id="@+id/skip_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="top|center_horizontal"
            android:onClick="SkipLogin"
            android:text="@string/skip_login"
            android:textColor="@drawable/transparent_btn_selector" />
    </LinearLayout>
</RelativeLayout>
